refactor(#91): Convention 통일